--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pokemon",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sahil-nagpal.github.io/pokemon",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,7 +17,9 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
